--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -1,7 +1,7 @@
-.hierarchical-control .hierarchical-input {
+.tree-control .tree-input {
   cursor: text;
 }
-.hierarchical-control .hierarchical-input span.selected-items .selected-item {
+.tree-control .tree-input span.selected-items .selected-item {
   background: #5bc0de;
   color: #fff;
   padding: 2px 0 2px 8px;
@@ -9,7 +9,7 @@
   border-radius: 3px;
   margin-right: 3px;
 }
-.hierarchical-control .hierarchical-input span.selected-items .selected-item-close {
+.tree-control .tree-input span.selected-items .selected-item-close {
   width: 20px;
   cursor: pointer;
   color: #fff;
@@ -17,22 +17,22 @@
   display: inline-block;
   padding-left: 7px;
 }
-.hierarchical-control .hierarchical-input span.selected-items .selected-item-close:hover {
+.tree-control .tree-input span.selected-items .selected-item-close:hover {
   background: #3db5d8;
 }
-.hierarchical-control .hierarchical-input span.selected-items .selected-item-close:before {
+.tree-control .tree-input span.selected-items .selected-item-close:before {
   content: 'x';
 }
-.hierarchical-control .hierarchical-input input.blend-in {
+.tree-control .tree-input input.blend-in {
   border: none;
   border-width: 0;
 }
-.hierarchical-control .hierarchical-input input.blend-in:focus {
+.tree-control .tree-input input.blend-in:focus {
   border: none;
   border-width: 0;
   outline: none;
 }
-.hierarchical-control .tree-view {
+.tree-control .tree-view {
   position: absolute;
   max-height: 300px;
   min-width: 250px;
@@ -45,42 +45,42 @@
   padding: 10px 5px;
   cursor: default;
 }
-.hierarchical-control .tree-view ul {
+.tree-control .tree-view ul {
   padding: 0;
   margin: 0;
 }
-.hierarchical-control .tree-view ul .item-details {
+.tree-control .tree-view ul .item-details {
   display: inline-block;
   margin-left: 5px;
 }
-.hierarchical-control .tree-view ul .tree-checkbox {
+.tree-control .tree-view ul .tree-checkbox {
   margin-right: 3px;
   margin-top: 0;
 }
-.hierarchical-control .tree-view .active {
+.tree-control .tree-view .active {
   background-color: #f2f2f2;
   border-radius: 3px;
 }
-.hierarchical-control .tree-view .selected.active {
+.tree-control .tree-view .selected.active {
   background-color: #46b8da;
 }
-.hierarchical-control .tree-view .item-container {
+.tree-control .tree-view .item-container {
   padding: 1px 10px;
   margin-top: 1px;
   margin-bottom: 1px;
 }
-.hierarchical-control .tree-view .selected {
+.tree-control .tree-view .selected {
   padding: 0px 10px;
   background: #5bc0de;
   color: #fff;
   border: 1px solid #46b8da;
   border-radius: 3px;
 }
-.hierarchical-control .tree-view li {
+.tree-control .tree-view li {
   list-style-type: none;
   margin-left: 15px;
 }
-.hierarchical-control .tree-view li .expando {
+.tree-control .tree-view li .expando {
   display: inline-block;
   width: 0;
   height: 0;
@@ -88,12 +88,12 @@
   border-bottom: 6px solid transparent;
   border-left: 10px solid #525252;
 }
-.hierarchical-control .tree-view li .expando-opened {
+.tree-control .tree-view li .expando-opened {
   border: none;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-top: 10px solid #525252;
 }
-.hierarchical-control .tree-view li.top-level {
+.tree-control .tree-view li.top-level {
   margin: 0;
 }
