--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -1,24 +1,58 @@
 .tree-control .tree-input {
-  cursor: text;
+  display: block;
+  position: relative;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #c6c6c6;
+  padding: 1px 8px 1px 8px;
+  font-size: 14px;
+  min-height : 38px !important;
+  border-radius: 4px;
+  color: #555;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  white-space:normal;
+  background-color: #fff;
+  background-image: linear-gradient(#fff, #f7f7f7);
 }
+
+.tree-control .tree-input:hover {
+  background-image: linear-gradient(#fff, #e9e9e9);
+}
+
+/* downward pointing arrow */
+.tree-control .caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin: 0px 0px 1px 12px  !important;
+  vertical-align: middle;
+  border-top: 4px solid #333;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+  border-bottom: 0 dotted;
+}
+
 .tree-control .tree-input span.selected-items .selected-item {
-  background: #5bc0de;
-  color: #fff;
-  padding: 2px 0 2px 8px;
-  border: 1px solid #46b8da;
+  background: #f2f2f2;
+  border: 1px solid darkgray;
   border-radius: 3px;
   margin-right: 3px;
+  display: inline-block;
+  padding: 2px 0px 2px 8px;
 }
 .tree-control .tree-input span.selected-items .selected-item-close {
   width: 20px;
   cursor: pointer;
-  color: #fff;
   font-weight: bold;
   display: inline-block;
   padding-left: 7px;
 }
 .tree-control .tree-input span.selected-items .selected-item-close:hover {
-  background: #3db5d8;
+  background-color: #f2f2f2
 }
 .tree-control .tree-input span.selected-items .selected-item-close:before {
   content: 'x';
@@ -33,17 +67,18 @@
   outline: none;
 }
 .tree-control .tree-view {
+  background-color: #fff;
   position: absolute;
-  max-height: 300px;
-  min-width: 250px;
-  max-width: 60%;
-  background: #ffffff;
-  border: solid 1px #c4c4c4;
+  z-index: 999;
+  border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  min-width:278px;
+  margin-right: 30px;
+  max-height: 300px;
   overflow: auto;
-  z-index: 500;
   padding: 10px 5px;
-  cursor: default;
 }
 .tree-control .tree-view ul {
   padding: 0;
@@ -56,6 +91,7 @@
 .tree-control .tree-view ul .tree-checkbox {
   margin-right: 3px;
   margin-top: 0;
+  color: #ddd !important;
 }
 .tree-control .tree-view .active {
   background-color: #f2f2f2;
@@ -65,16 +101,24 @@
   background-color: #46b8da;
 }
 .tree-control .tree-view .item-container {
-  padding: 1px 10px;
-  margin-top: 1px;
-  margin-bottom: 1px;
+  padding: 3px;
+  color: #444;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  position: relative;
 }
 .tree-control .tree-view .selected {
-  padding: 0px 10px;
-  background: #5bc0de;
-  color: #fff;
-  border: 1px solid #46b8da;
-  border-radius: 3px;
+  background-image: linear-gradient( #e9e9e9, #f1f1f1 );
+  color: #555;
+  cursor: pointer;
+  border-top: 1px solid #e4e4e4;
+  border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #d9d9d9;
 }
 .tree-control .tree-view li {
   list-style-type: none;
