--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -67,8 +67,8 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   min-width:278px;
   margin-right: 30px;
-  max-height: 300px;
-  overflow: auto;
+ /* max-height: 300px;
+  overflow: auto;*/
   padding: 10px 5px;
 }
 .tree-control .tree-view ul {
@@ -202,6 +202,7 @@
 .tree-control .tree-view .line {
   max-height: 34px;
   overflow: hidden;
+  position: relative;
 }
 
 .tree-control .tree-view li {
