--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -210,7 +210,7 @@
   margin-left: 15px;
 }
 
-.tree-control .tree-view li .expando {
+.tree-control .tree-view li .expand {
   display: inline-block;
   width: 0;
   height: 0;
@@ -218,7 +218,7 @@
   border-bottom: 6px solid transparent;
   border-left: 10px solid #525252;
 }
-.tree-control .tree-view li .expando-opened {
+.tree-control .tree-view li .expand-opened {
   border: none;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
