added button style.

--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -1,5 +1,6 @@
 .tree-control .tree-input {
   position: relative;
+  text-align: center;
   cursor: pointer;
   border: 1px solid #c6c6c6;
   padding: 1px 8px 1px 8px;
