added button style.

--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -101,7 +101,7 @@
 }
 
 /* container of multi select items */
-.tree-control .tree-view .tree-Container {
+.tree-control .tree-view .tree-container {
   display: inline-block;
   padding: 8px;
 }
