--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -41,6 +41,7 @@
   border-radius: 3px;
   padding: 3px;
   cursor: text;
+  display: inline-block;
 }
 .tree-control .tree-input span.selected-items .selected-item-close {
   width: 20px;
