--- a/src/multi-select-tree.less
+++ b/src/multi-select-tree.less
@@ -41,19 +41,18 @@
   border-radius: 3px;
   padding: 3px;
   cursor: text;
-  display: inline-block;
 }
-.tree-control .tree-input span.selected-items .selected-item-close {
+.tree-control .tree-input span.selected-items .item-close {
   width: 20px;
   cursor: pointer;
   font-weight: bold;
   display: inline-block;
   padding: 5px;
 }
-.tree-control .tree-input span.selected-items .selected-item-close:hover {
+.tree-control .tree-input span.selected-items .item-close:hover {
   background-color: #f2f2f2
 }
-.tree-control .tree-input span.selected-items .selected-item-close:before {
+.tree-control .tree-input span.selected-items .item-close:before {
   content: 'x';
 }
 
@@ -67,8 +66,8 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   min-width:348px;
   margin-right: 30px;
- /* max-height: 300px;
-  overflow: auto;*/
+  max-height: 300px;
+  overflow: auto;
   padding: 10px 5px;
 }
 .tree-control .tree-view ul {
